--- a/templates/home.html
+++ b/templates/home.html
@@ -34,12 +34,8 @@
                 <input type="text" placeholder="Search books..." />
             </div>
             <div class="profile-cart">
-                <a href="/sign-up" class="profile-icon">
+                <a href="{{ url_for('profile') }}" class="profile-icon">
                     <i class="fas fa-user"></i>
-                    <div class="profile-dropdown">
-                        <a href="#">Login</a>
-                        <a href="#">Sign Up</a>
-                    </div>
                 </a>
                 <a href="#" class="cart-icon">
                     <i class="fas fa-shopping-cart"></i>
