--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,7 @@
     <br>
     <div class="login-options">
         <div class="login-header">Login or Signup Below</div>
+        <div class="login-option"><a href="{{ url_for('admin') }}">Login As Admin</a></div>
         <div class="login-option"><a href="{{ url_for('login') }}">Login As User</a></div>
         <div class="login-option"><a href="{{ url_for('sign') }}">New user ! Register Here</a></div>
     </div>
