--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,12 +12,26 @@
     </div>
     <div id="topmid"><h1>Welcome to Online Book Store</h1></div>
     <br>
+    {% if not current_user.is_authenticated %}
     <div class="login-options">
         <div class="login-header">Login or Signup Below</div>
         <div class="login-option"><a href="{{ url_for('admin') }}">Login As Admin</a></div>
         <div class="login-option"><a href="{{ url_for('login') }}">Login As User</a></div>
         <div class="login-option"><a href="{{ url_for('sign') }}">New user ! Register Here</a></div>
     </div>
-
+    {% else %}
+    <div class="user-profile">
+        <h2>Welcome, {{ current_user.username }}</h2>
+        <div class="user-info">
+            <p>Email: {{ current_user.email }}</p>
+        </div>
+        {% if current_user.id == 1  %}
+        <div class="admin-options">
+            <a href="{{ url_for('admin') }}" class="btn">Admin Page</a>
+        </div>
+        {% endif %}
+        <a href="{{ url_for('logout') }}" class="btn">Logout</a>
+    </div>
+    {% endif %}
 </body>
 </html>
