--- a/static/profile.css
+++ b/static/profile.css
@@ -7,7 +7,7 @@ body, html {
 .background-container {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 0;a
   width: 100%;
   height: 100%;
   z-index: -1;
