--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,32 +6,35 @@
     <title>Book Store</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='profile.css') }}">
 </head>
-<body onload="funload()">
+<body>
     <div class="background-container">
         <img src="{{ url_for('static', filename='Books/download (2).jpeg') }}" alt="Background" class="background-image">
     </div>
-    <div id="topmid"><h1>Welcome to Online Book Store</h1></div>
-    <br>
-    {% if not current_user.is_authenticated %}
-    <div class="login-options">
-        <div class="login-header">Login or Signup Below</div>
-        <div class="login-option"><a href="{{ url_for('admin') }}">Login As Admin</a></div>
-        <div class="login-option"><a href="{{ url_for('login') }}">Login As User</a></div>
-        <div class="login-option"><a href="{{ url_for('sign') }}">New user ! Register Here</a></div>
+    <div class="header">
+        <h1>Welcome to Online Book Store</h1>
     </div>
-    {% else %}
-    <div class="user-profile">
-        <h2>Welcome, {{ current_user.username }}</h2>
-        <div class="user-info">
-            <p>Email: {{ current_user.email }}</p>
+    <main>
+        {% if not current_user.is_authenticated %}
+        <div class="login-options">
+            <div class="login-header">Login or Signup Below</div>
+            <div class="login-option"><a href="{{ url_for('admin') }}">Login As Admin</a></div>
+            <div class="login-option"><a href="{{ url_for('login') }}">Login As User</a></div>
+            <div class="login-option"><a href="{{ url_for('sign') }}">New user ! Register Here</a></div>
         </div>
-        {% if current_user.id == 1  %}
-        <div class="admin-options">
-            <a href="{{ url_for('admin') }}" class="btn">Admin Page</a>
+        {% else %}
+        <div class="user-profile">
+            <h2>Welcome, {{ current_user.username }}</h2>
+            <div class="user-info">
+                <p>Email: {{ current_user.email }}</p>
+            </div>
+            {% if current_user.id == 1  %}
+            <div class="admin-options">
+                <a href="{{ url_for('admin') }}" class="btn">Admin Page</a>
+            </div>
+            {% endif %}
+            <a href="{{ url_for('logout') }}" class="btn">Logout</a>
         </div>
         {% endif %}
-        <a href="{{ url_for('logout') }}" class="btn">Logout</a>
-    </div>
-    {% endif %}
+    </main>
 </body>
 </html>
