--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
                         <li><a href="#">Fiction</a></li>
                         <li><a href="#">Non-Fiction</a></li>
                         <li><a href="#">Romance</a></li>
-                        <li><a href="#">Mystery</a></li>
+                        <li><a href="mystery">Mystery</a></li>
                         <li><a href="#">Sci-Fi</a></li>
                         <li><a href="#">Self Help</a></li>
                     </ul>
@@ -46,11 +46,14 @@
     </header>
 
     <section>
+        <div class="mystery">
+            <h1>Mystery Novels</h1>
+        </div>
         <section class="product-grid">
             
             <!-- mysterry -->
             <div class="product-item">
-                <a href="#">
+                <a href="mystery">
                     <img src="{{ url_for('static', filename='Books/The Silent Patient.jpeg') }}" alt="Chandelier 3">
                 </a>
                 <div class="caption">
