--- a/templates/cart.html
+++ b/templates/cart.html
@@ -45,6 +45,7 @@
             </div>
             {% endif %}
         </div>
+        <button class="checkout-btn" onclick="window.location.href='/checkout';">Checkout</button>
     </div>
 
     <script>
