--- a/templates/home.html
+++ b/templates/home.html
@@ -46,11 +46,8 @@
     </header>
 
     <section>
-        <div class="mystery">
-            <h1>Mystery Novels</h1>
-        </div>
+        
         <section class="product-grid">
-            
             <!-- mysterry -->
             <div class="product-item">
                 <a href="mystery">
@@ -575,6 +572,25 @@
             </div>
 
         </section>
+
+        <footer>
+            <div class="footer-content">
+              <div class="tagline">
+                <p>Stories that stay with you forever.</p>
+                <p></p>
+              </div>
+              <div class="quote">
+                <p>In the pages of a book, you'll find worlds to explore, characters to love, and stories that linger forever</p>
+              </div>
+              <div class="contact-info">
+                <p>Email: support@bookish-bliss.com</p>
+                <p>Address: 123 Main Street, Nairobi, Kenya</p>
+              </div>
+              <div class="copyright">
+                <p>&copy; 2024 Bookstore. All Rights Reserved.</p>
+              </div>
+            </div>
+        </footer>
 
 
 
