--- a/static/home.css
+++ b/static/home.css
@@ -160,7 +160,7 @@ body, html {
     max-width: 100%;
     margin: 0 auto;
     grid-template-columns: repeat(3, 1fr);
-    margin-top: 10px;
+    margin-top: 100px;
 }
 
 .product-item {
@@ -241,6 +241,42 @@ body, html {
 }
 .mystery h1:hover {
     text-decoration: wavy;
+}
+
+footer {
+    background-color: #405978;
+    color: #fff;
+    padding: 40px;
+    text-align: center;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .footer-content {
+    max-width: 800px;
+  }
+  
+  .tagline p {
+    font-size: 20px;
+    font-style: italic;
+    margin: 10px 0;
+  }
+  
+  .quote {
+    font-size: 18px;
+    font-style: italic;
+    margin: 30px 0;
+  }
+  
+  .contact-info p {
+    margin: 10px 0;
+  }
+  
+  .copyright {
+    font-size: 14px;
+    margin-top: 20px;
 }
 
 
