--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="background-container">
-        <img src="{{ url_for('static', filename='Books/download (2).jpeg') }}" alt="Background" class="background-image">
+        <img src="{{ url_for('static', filename='Stylized photo.jpeg') }}" alt="Background" class="background-image">
     </div>
     <div class="header">
         <h1>Welcome to Online Book Store</h1>
