--- a/static/profile.css
+++ b/static/profile.css
@@ -15,9 +15,14 @@ body, html {
 }
 
 .background-image {
-  width: 2200x;
-  height: 100%;
+  width: 100%;
+  height: 100vh;
   object-fit: cover;
+  object-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 header {
