--- a/templates/home.html
+++ b/templates/home.html
@@ -39,6 +39,7 @@
                 <a href="{{ url_for('profile') }}" class="profile-icon">
                     <i class="fas fa-user"></i>
                 </a>
+                <a href="{{ url_for('cart') }}" class="profile-icon">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
             </div>
